finished tab functions with the toolkit section content and went through and fine tuned

--- a/_includes/toolkit_sections/annual_four.html
+++ b/_includes/toolkit_sections/annual_four.html
@@ -193,13 +193,13 @@
       completed evaluation and help them to understand the findings. </li>
   </ul>
   <p style="text-align: left;">
-    Use <b><span style='color:#2E9AC4'>Worksheet #2 </span></b>
+    Use <b><span style='color: orange'>Worksheet #2 </span></b>
     of the Annual Evaluation Plan Workbook to brainstorm dissemination
    approaches. For additional information about appropriate formats and channels of
    communication, see the <i>Evaluation Planning Quick Tips</i> guide.
   </p>
   <p style="text-align: left;">
-    <b><span style='color:#2E9AC4'>Worksheet #3 </span></b>
+    <b><span style='color: orange'>Worksheet #3 </span></b>
     can help you summarize evaluations along some of the key dimensions
     highlighted in this section. The following toolkit sections describe the considerations for each
     dimension and suggest activities for developing the content of the Annual Evaluation Plan.
@@ -213,8 +213,8 @@
   </p>
   <p style="text-align: left;">
     <b><span style='color:#2E9AC4'>Provide a rationale for why your agency considers this evaluation “significant.” </span></b>
-    See <a href="{{ site.baseurl}}/annualinfo#3"><b>Section 3:</b></a>
-    Defining Significant Evaluations for guidance on developing criteria for “significant” and
+    See <a href="{{ site.baseurl}}/annualinfo#3"><b>Section 3:
+    Defining Significant Evaluations</b></a> for guidance on developing criteria for “significant” and
     creating a process for using the criteria to assess evaluations. Including an explanation as to
     why a study is “significant” provides insights into your agency’s evaluation priorities.
   </p>
@@ -248,5 +248,5 @@
     there is something noteworthy about your agency’s plans. For example, if your agency is
     conducting an evaluation through an ongoing research partnership with an academic
     institution, you might want to share this information to highlight your agency’s resourcefulness
-    in addressing learning agenda priorities. 
+    in addressing learning agenda priorities.
   </p>
