--- a/_includes/toolkit_sections/annual_three.html
+++ b/_includes/toolkit_sections/annual_three.html
@@ -8,7 +8,7 @@
       “significant” evaluations, describe these criteria in
       the Annual Evaluation Plan, and apply these
       criteria consistently to determine which
-      evaluations to include in the plan. OMB M-19-23
+      evaluations to include in the plan. <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a>
       provides several potential criteria for agencies to
       consider (see box on the right).</p>
       <p>Identifying an evaluation as “significant”
@@ -22,7 +22,7 @@
       may not include all of their ongoing and planned
       evaluations.</p>
     </div>
-    <div class="side-panel">
+    <div class="side-panel" style="width: 4000px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p><b> What is a “significant” evaluation? </b></p>
       <p> The significance of an evaluation study should take into consideration factors such as:</p>
