--- a/_includes/toolkit_sections/annual_two.html
+++ b/_includes/toolkit_sections/annual_two.html
@@ -71,7 +71,7 @@ develop a planning process that suits its unique needs and capacity?
         <b><span style='color:#2E9AC4'>Stakeholders who can inform content:</span></b> Beyond the
           core team and leadership, consider the range of
           internal and external stakeholders who can offer
-          useful perspectives or insights. OMB M-19-23 dictates
+          useful perspectives or insights. <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a> dictates
           that program staff should be consulted if they will be
           responsible for supporting a significant evaluation or
           using findings. Program staff can be helpful in
@@ -178,7 +178,8 @@ develop a planning process that suits its unique needs and capacity?
     <b><span style='color:#2E9AC4'>Developing content for the Annual Evaluation Plan.</span></b> Key stakeholders, such as your agency’s
     program staff, can assist evaluation staff in clarifying specific evaluation questions, identifying
     opportunities for rigorous evaluation, and designing strategies for targeted engagement of key
-    external stakeholders. These activities can generate basic information about a planned evaluation that can be included the Annual Evaluation Plan. OMB M-19-23 acknowledges that
+    external stakeholders. These activities can generate basic information about a planned evaluation that can be included the Annual Evaluation Plan.
+    <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a> acknowledges that
     “forecasting evaluation activities in advance may be challenging” and encourages agencies to
     provide the level of detail that is feasible
   </p>
