--- a/_includes/toolkit_sections/section_five.html
+++ b/_includes/toolkit_sections/section_five.html
@@ -46,8 +46,8 @@
     <p style="text-align: left;">
       For guidance on individual stakeholder meetings, see <b><span style='color:orange'>Worksheet #2</span></b> of the Learning
       Agenda Workbook to design meeting agendas. Additional meeting styles, facilitation
-      techniques, and tips are available in the USAID resource, <b><span style='color:#2E9AC4'>Designing and Facilitating
-      Learning-Focused Meetings.</span></b> To plan the schedule and cadence of all stakeholder
+      techniques, and tips are available in the USAID resource, <a href="https://usaidlearninglab.org/sites/default/files/resource/files/designing_and_facilitating_learning_focused_meetings_final_20190326.pdf"> Designing and Facilitating
+      Learning-Focused Meetings.</a> To plan the schedule and cadence of all stakeholder
       engagement activities, refer to <b><span style='color:orange'>Worksheet #3</span></b> of the Learning Agenda Workbook.
     </p>
     <div class="heading_content_wrapper">
@@ -94,8 +94,8 @@
       the EO should consider reviewing for alignment with the learning agenda process.
     </p>
     <p style="text-align: left;">
-      The first table of plans and processes fall under the <b><span style='color:#2E9AC4'>GPRA Modernization Act
-      (GPRAMA) of 2010.</span></b> GPRAMA requires quarterly performance assessments of
+      The first table of plans and processes fall under the <a href="https://www.congress.gov/111/plaws/publ352/PLAW-111publ352.pdf">GPRA Modernization Act
+      (GPRAMA) of 2010.</a> GPRAMA requires quarterly performance assessments of
       government programs, provides updated guidance on agency Strategic Plans, and
       establishes the role of Performance Improvement Officer (PIO) and the Performance
       Improvement Council. The PIO is responsible for Office of Management and Budget
