--- a/_includes/toolkit_sections/section_one.html
+++ b/_includes/toolkit_sections/section_one.html
@@ -16,12 +16,13 @@
       described in Phase 1 Implementation of the
       Foundations for Evidence-Based Policymaking Act of
       2018: Learning Agendas, Personnel, and Planning
-      Guidance (OMB M-19-23). Agencies have the flexibility to design the document in a way
+      Guidance <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a>.
+      Agencies have the flexibility to design the document in a way
       that makes it useful to their unique needs, including those of leadership, programs, and
       other stakeholders. A learning agenda can facilitate evidence generation, leading to
       informed decisions about an agency’s policies, programs, operations, and regulations.
     </div>
-    <div class="side-panel">
+    <div class="side-panel" style="width: 4000px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p><b> What is a learning agenda
       (evidence-building plan)? </b></p>
@@ -89,7 +90,7 @@
     </div>
     <div class="contents_wrapper">
       <p style="width: 2000px"> <i>Help develop other major agency plans.  </i>
-        <a href="{{ site.baseurl}}/learninginfo#5""><b>As explained in Section 5: Developing a
+        As explained in <a href="{{ site.baseurl}}/learninginfo#5""><b>Section 5: Developing a
         Learning Agenda</b></a>, the learning agenda can
         support a variety of major plans and activities,
         including the Unified Agenda of Federal
@@ -178,12 +179,12 @@
     <p style="text-align: left;">The EO and related staff can use the resources in this toolkit to design and execute a
     learning agenda process best suited to agency needs. Here are a few examples of
     steps your agency can take now to advance the learning agenda process:</p>
-    <p style="text-align: left; color: #2E9AC4">Review your agency’s major plans to understand its evidence base.</p>
+    <p style="text-align: left; color: #2E9AC4"><b>Review your agency’s major plans to understand its evidence base.</b></p>
     <p style="text-align: left;"> Your agency may already use evidence to inform strategy and operations. For example, several
       agency Strategic Plans include sections on program evaluation or evidence-based
       policymaking and decision-making. The learning agenda process can build off these
       existing activities.</p>
-    <p style="text-align: left; color: #2E9AC4">Meet with key decision makers in your agency.</p>
+    <p style="text-align: left; color: #2E9AC4"><b>Meet with key decision makers in your agency.</b></p>
     <p style="text-align: left;"> Senior leaders are critical and
       required stakeholders in the learning agenda process. In an initial meeting with senior
       leadership, the EO and related staff could discuss the benefits listed above and how the
@@ -193,15 +194,15 @@
       The council or working group could receive updates on the process and deliberate on
       the plan’s components. Download the attachment in the tab to the right for a one-page
       Learning Agenda Overview to share with agency staff.</p>
-      <p style="text-align: left; color: #2E9AC4">Establish a cross-functional leadership team.</p>
+      <p style="text-align: left; color: #2E9AC4"><b>Establish a cross-functional leadership team.</b></p>
       <p style="text-align: left;"> The EO should consider establishing
-      formal, recurring meetings with the CDO and SO. <a href="{{ site.baseurl}}/learninginfo#5""><b>As described in Section 5:
+      formal, recurring meetings with the CDO and SO. As described in <a href="{{ site.baseurl}}/learninginfo#5""><b>Section 5:
       Developing a Learning Agenda</b></a>, other officials may be valuable to include in the
       recurring meetings, such as the Chief Risk Officer, PIO, or PMIO. Where possible and
       appropriate, these officials should join meetings with senior leadership together. When
       discussing agency issues, it is valuable to have the diverse perspectives of strategy,
       evidence, data, and statistical leaders.</p>
-      <p style="text-align: left; color: #2E9AC4">Learn about leading practices in learning agenda development and use. </p>
+      <p style="text-align: left; color: #2E9AC4"><b>Learn about leading practices in learning agenda development and use.</b> </p>
       <p style="text-align: left;"> See
         <a href="{{ site.baseurl}}/learninginfo#8""><b>Section 8: Additional Resources</b></a> for links to previous learning agendas and similar
         Commented [HA3]: Include hyperlink to section
