--- a/_includes/toolkit_sections/section_seven.html
+++ b/_includes/toolkit_sections/section_seven.html
@@ -24,7 +24,7 @@
       <ul>
         <li>Confirm the accuracy of this information with the Chief Data Officer and Statistical Official.</li>
       </ul>
-    <li><b style="color:#2E9AC4;"><a href="{{ site.baseurl}}/learninginfo#6"> Section 6: Using Stakeholder Input</a> Excel and/or PowerPoint template:</b> If you conducted an exercise to vet and categorize questions, or received leadership feedback, you may have all priority questions finalized and approved at this stage. If you completed
+    <li><b><a href="{{ site.baseurl}}/learninginfo#6"> Section 6: Using Stakeholder Input</a> Excel and/or PowerPoint template:</b> If you conducted an exercise to vet and categorize questions, or received leadership feedback, you may have all priority questions finalized and approved at this stage. If you completed
       <b style="color:orange;">Table 8</b>, you might have all required information related to potential data, tools, methods, and analytical approaches, and anticipated challenges.</li>
     <li><b style="color:#2E9AC4;">Capacity Assessment results</b> The Capacity Assessment will also be published every four years with the learning agenda.
       There is no prescribed timing or coordination between the Capacity Assessment and learning agenda. However, some of the requirements may serve as useful inputs, as shown below.</li>
