--- a/_includes/toolkit_sections/section_three.html
+++ b/_includes/toolkit_sections/section_three.html
@@ -21,7 +21,7 @@
       support network to operationalize evidence-building activities in a way that is directly
       relevant to agency functions.
     </div>
-    <div class="side-panel">
+    <div class="side-panel" style="width: 4000px;">
       <p><b>OMB M-19-23 Reference</b></p>
       <p style="text-align: left;">The purpose of stakeholder engagement
         is to make sure that the learning agenda
@@ -38,7 +38,7 @@ framework can be useful in determining the different forms of outreach and engag
 needed to gather timely and relevant feedback. All three groups can offer important
 insights into the current state of evidence, knowledge gaps, and unmet needs. In the
 table below, <b><span style='color:#03CAB9'>stakeholders in green </span></b>are required per the Foundations for EvidenceBased Policymaking Act of 2018 (Evidence Act, Sec. 312.C 5 USC 312. Agency
-evidence-building plan). The stakeholders in black should be consulted per OMB M19-23. </p>
+evidence-building plan). The stakeholders in black should be consulted per <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a>. </p>
 <table>
   <tr style="color: white; text-align: center;">
     <td style="background-color: #2E9AC4;"><b> Internal <b/></td>
@@ -66,7 +66,7 @@ evidence-building plan). The stakeholders in black should be consulted per OMB M
       <p>Relevant Non-Governmental Organizations and Non-Profits Program Beneficiaries</p></td>
   </tr>
 </table>
-  <p style="text-align: left;"><b>Internal Stakeholders (Governmental)</b></p>
+  <p style="text-align: left;"><b>Internal Stakeholders</b></p>
   <p style="text-align: left;">When identifying internal stakeholders, it may be helpful to focus on utilization – in other
   words, who will utilize the evidence that comes out of the learning agenda? Utilization
   can exist in multiple dimensions, such as programs (who could prioritize certain
@@ -85,7 +85,7 @@ evidence-building plan). The stakeholders in black should be consulted per OMB M
     agendas in <span style="color: orange;"> Worksheet #2</span> of the Learning Agenda Workbook (available for download in
     the tab to the right), consider dedicating time to discuss expectations for their
     involvement. </p>
-    <p style="text-align: left;"><b>External Stakeholders</b></p>
+    <p style="text-align: left;"><b>External Stakeholders (Governmental)</b></p>
     <p style="text-align: left;">When identifying external government stakeholders, consider asking two questions.
       First, where are there overlaps in your agency’s mission at the local, state, and Federal
       levels? Coordination with agencies performing similar functions may increase the
@@ -114,7 +114,7 @@ evidence-building plan). The stakeholders in black should be consulted per OMB M
     of the Learning Agenda Workbook document the core team and their roles and
     responsibilities in <span style="color: orange;">Table 1.</span></p>
   <p style="text-align: left;">Consider inviting an agency leadership champion to join core team meetings.
-    Leadership input is required in developing the learning agenda (see <a href="{{ site.baseurl}}/learninginfo#6"><b> Section 4:
+    Leadership input is required in developing the learning agenda (see <a href="{{ site.baseurl}}/learninginfo#4"><b> Section 4:
     Encouraging Leadership Buy-In).</b></a> A champion can offer ongoing feedback and may
     be able to make decisions outside of the team’s authority. </p>
     <p style="text-align: left;">One alternative to forming a new team is to expand the scope of an existing group to
@@ -157,10 +157,10 @@ evidence-building plan). The stakeholders in black should be consulted per OMB M
           disseminate and use evidence generated from the learning products. </li>
         </ul>
     </div>
-    <p style="text-align: left;">If you form a learning agenda core team, meet with the team to complete <span style="color: orange;">Activity 1</span> in
+    <p style="text-align: left;">If you form a learning agenda core team, meet with the team to complete <span style="color: orange;"><b>Activity 1</b></span> in
       the Learning Agenda Workbook. The activity will help your team fill out the stakeholder
-      matrix in <span style="color: orange;">Table 2.</span> If you do not have a core team, consider using the guidance below to
-      complete <span style="color: orange;">Table 2</span> to the best of your knowledge.  </p>
+      matrix in <span style="color: orange;"><b>Table 2.</b></span> If you do not have a core team, consider using the guidance below to
+      complete <span style="color: orange;"><b>Table 2</b></span> to the best of your knowledge.  </p>
     <p style="text-align: left;"><b>An Overview of Stakeholder Engagement Activities</b></p>
     <p style="text-align: left;">There is no universal approach to stakeholder engagement – the methods will vary by
       stakeholder group and the agency’s needs, resources, and structure. The type of
@@ -180,8 +180,8 @@ evidence-building plan). The stakeholders in black should be consulted per OMB M
       <p style="text-align: left;">In <a href="{{ site.baseurl}}/learninginfo#5"><b>Section 5: Developing a Learning Agenda,</b></a> the EO and related staff will design the
         learning agenda process. This includes when and how to engage stakeholders to get
         the most out of their inputs. To assist with planning stakeholder engagement meeting
-        content, <span style="color: orange;">Worksheet 2</span> of the Learning Agenda Workbook includes sample meeting
-        outcomes, discussion topics, and tips for consideration. Reference <span style="color: orange;">Worksheet 2</span>
+        content, <span style="color: orange;"><b>Worksheet 2</b></span> of the Learning Agenda Workbook includes sample meeting
+        outcomes, discussion topics, and tips for consideration. Reference <span style="color: orange;"><b>Worksheet 2</b></span>
         throughout <a href="{{ site.baseurl}}/learninginfo#3"><b>Section 3: Engaging Stakeholders,</b></a><a href="{{ site.baseurl}}/learninginfo#4""><b> Section 4: Encouraging Leadership
         Buy-In,</b></a> and <a href="{{ site.baseurl}}/learninginfo#5"><b>Section 5: Developing a Learning Agenda.</b></a> </p>
       <p style="text-align: left;">As noted above, senior leadership and program managers are very important
