--- a/_includes/toolkit_sections/section_two.html
+++ b/_includes/toolkit_sections/section_two.html
@@ -45,8 +45,8 @@ question” and what are some examples?
     input into a set of priority questions to include in your agency’s learning agenda
     <a href="{{ site.baseurl}}/learninginfo#6"><b>(Section 6: Using Stakeholder Input)</b></a>. Throughout the stakeholder engagement
     process, consider the following tips about priority questions: </p>
-  <p style="text-align: left; color: #2E9AC4">Where appropriate, start with an overarching question and develop specific,
-    answerable questions.</p> <p style="text-align: left;">Useful learning agenda questions do not need to be narrow in
+  <p style="text-align: left;"><span style="color: #2E9AC4;"><b>Where appropriate, start with an overarching question and develop specific,
+    answerable questions.</b></span> Useful learning agenda questions do not need to be narrow in
     scope. However, a question may be too broad to be answerable. Below is an example
     of an overarching question from a fictitious Department of Societal Betterment, whose
     agency mission is to reduce societal nuisances. The question is followed by series of
@@ -88,14 +88,14 @@ question” and what are some examples?
     <p style="text-align: left;">Learning agenda questions do not need to be answerable with one study. Important
       questions often require sub-questions and multiple studies or analyses, typically
       building on each other, to create a useful and actionable body of evidence.</p>
-      <p style="text-align: left;"><span style='color:#03CAB9'>Consider how each question could be measured.</span> Can the question be answered
+      <p style="text-align: left;"><span style='color:#2E9AC4'>Consider how each question could be measured.</span> Can the question be answered
       with qualitative or quantitative data? If yes, does the data exist, or does your agency
       need to plan new data collection efforts?
       Without supporting evidence, the answer
       to the question is unlikely to inform
       agency decisions.</p>
       <div class="heading_content_wrapper">
-        <p> <span style='color:#03CAB9'>Include questions that draw on
+        <p style="text-align: left;"> <span style='color:##2E9AC4'>Include questions that draw on
         different components of evidence.</span> As
         your agency formulates questions for its
         learning agenda, think ahead about
@@ -105,7 +105,8 @@ question” and what are some examples?
         measurement help answer your priority
         questions? As shown to the right, these
         are the four components of evidence
-        described in OMB M-19-23. See the box
+        described in <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a>.
+        See the box
         below for a subset of the Small Business
         Administration’s (SBA) learning agenda
         questions, organized by evidence type. </p>
@@ -116,8 +117,8 @@ question” and what are some examples?
       Components of Evidence </b></p>
       <p style="text-align: left;">The SBA develops an Enterprise Learning Agenda (ELA) to empower program managers to
         achieve their priorities while fostering an environment of continuous learning. The ELA is a
-        five-year plan that aligns with the Agency’s goals outlined in the FY 2018-2022 Strategic
-        Plan. The ELA includes questions that cover the different components of evidence to allow
+        five-year plan that aligns with the Agency’s goals outlined in the <a href="https://www.sba.gov/sites/default/files/2018-06/SBA_FY_2018-2022_Strategic_Plan.pdf"> FY 2018-2022 Strategic
+        Plan</a>. The ELA includes questions that cover the different components of evidence to allow
         for evidence building across a spectrum of methods. The following questions are aligned to
         the strategic goal, “Support small business revenue and job growth.” </p>
         <ul style="text-align: left;">
@@ -130,7 +131,7 @@ SBA programs create more jobs?</li>
     </div>
     <p style="text-align: left;"> <b>Defining “Short-Term” and “Long-Term” Questions </b></p>
     <p style="text-align: left;"> Agencies should include short-term and long-term questions in their learning agendas,
-      including definitions of the timeframes (OMB M-19-23). Consider the following factors
+      including definitions of the timeframes (<a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a>). Consider the following factors
       when defining what “short-term” and “long-term” mean for your agency:</p>
       <ul style="text-align: left;">
         <li> <b><span style='color:#2E9AC4'>Agency capacity: </span></b>Consider referencing your agency’s Capacity Assessment, if
@@ -147,7 +148,7 @@ SBA programs create more jobs?</li>
         consider the timeline for answering consecutive short-term questions.  </li>
       </ul>
       <p style="text-align: left;"> For more information and examples of short-term and long-term questions, please refer
-        to Table B.1: Example of Potential Learning Agenda Questions on page 17 of OMB M19-23. </p>
+        to Table B.1: Example of Potential Learning Agenda Questions on page 17 of <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a>. </p>
       <p style="text-align: left;"> <b>Sample Questions by Mission Area and Agency Function </b></p>
       <p style="text-align: left;"> Some agencies are primarily grant-making organizations, others are operational, and
         many function in multiple mission areas. To assist with priority question brainstorming,
