--- a/_sass/components/toolkits.scss
+++ b/_sass/components/toolkits.scss
@@ -222,12 +222,12 @@ li {
 }
 
 a {
-  color: black;
+  color: #2E9AC4;
 }
 
-a:visited {
-  color: black;
-}
+// a:visited {
+//   color: black;
+// }
 
 
 //SECTIONS
@@ -245,7 +245,7 @@ a:visited {
 
 .side-panel {
   font-family: "Lato", "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-  width: 4000px;
+  // width: 4000px;
   background-color: #D0D0D0;
   padding: 10px;
 }
