--- a/_includes/toolkit_sections/section_six.html
+++ b/_includes/toolkit_sections/section_six.html
@@ -45,7 +45,7 @@ information to create a list of priority questions for your learning agenda?
 <p style="text-align: left;">
   f your agency opts to have sub-agency learning agendas, this process can be used to
   determine which sub-agency learning agenda questions will be included in the agencywide learning agenda. Please note that sub-agency learning agendas cannot fulfill the
-  requirement for an agency-wide learning agenda. See the <a href="{{ site.baseurl}}/learninginfo#4"">Office of Evaluation Sciences
+  requirement for an agency-wide learning agenda. See the <a href="{{ site.baseurl}}/toolkits"">Office of Evaluation Sciences
   Toolkit Landing Page</a> to download additional information about sub-agency learning
   agendas.
 </p>
@@ -59,10 +59,10 @@ information to create a list of priority questions for your learning agenda?
   on evidence priorities may be in the form of statements. Some practitioners find it useful
   to convert statements into questions before reviewing them. They also recommend
   separating multi-part questions and removing duplicative input. For examples of priority
-questions, refer to <a href="{{ site.baseurl}}/learninginfo#4""><b>Section 2: Types of Learning Questions.</b></a>
+questions, refer to <a href="{{ site.baseurl}}/learninginfo#2""><b>Section 2: Types of Learning Questions.</b></a>
 </p>
 <p style="text-align: left;">
-  If you formed a core team (see <a href="{{ site.baseurl}}/learninginfo#4""><b>Section 3: Engaging Stakeholders</b></a>), you may be
+  If you formed a core team (see <a href="{{ site.baseurl}}/learninginfo#3""><b>Section 3: Engaging Stakeholders</b></a>), you may be
   interested in additional guidance about how to operationalize the question review
   process for this team. The process below, and guidance in <span style="color: orange;"><b>Activity #2</b></span> of the Learning
   Agenda Workbook can be used to form questions that are relevant and meaningful to
@@ -92,7 +92,7 @@ questions, refer to <a href="{{ site.baseurl}}/learninginfo#4""><b>Section 2: Ty
   <p style="text-align: center;"> <b>A Tool for Developing Learning Questions
 from the United States Agency for International Development </b></p>
   <p style="text-align: left;">
-    This <a href="{{ site.baseurl}}/learninginfo#4"><b>checklist</b></a>, summarized below, is used by USAID and its implementing partners when
+    This <a href="https://usaidlearninglab.org/sites/default/files/resource/files/learning_questions_checklist_december_2018.pdf"><b>checklist</b></a>, summarized below, is used by USAID and its implementing partners when
     developing or reviewing learning questions during monitoring, evaluation, and learning
     processes
   </p>
@@ -123,7 +123,7 @@ from the United States Agency for International Development </b></p>
     the portfolio of questions align to leadership
     priorities, Foundations for Evidence-Based
     Policymaking Act of 2018 (Evidence Act)
-    requirements, and OMB M-19-23 suggestions.
+    requirements, and <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a> suggestions.
     As a reminder, the priority questions should
     reflect a mix of both mission-strategic and
     agency-operational questions, as well as
@@ -133,7 +133,7 @@ from the United States Agency for International Development </b></p>
     Below is a list of potential questions to
     consider when assessing appropriateness of balance using <span style="color: orange;"><b>Table 7.</b></span>
   </div>
-  <div class="side-panel">
+  <div class="side-panel" style="width: 4000px;">
     <p><b>OMB M-19-23 Reference</b></p>
     <p style="text-align: left;">Agencies should identify priority
     questions that, when answered, will
@@ -174,7 +174,7 @@ from the United States Agency for International Development </b></p>
       geographic region.</p></li>
     <li style="text-align: left;"><b><span style='color:#2E9AC4'>
       Do questions reflect consideration of the four components of evidence
-      noted in OMB M-19-23 (i.e., performance measurement, policy analysis,
+      noted in <a href="https://www.whitehouse.gov/wp-content/uploads/2019/07/M-19-23.pdf">OMB M-19-23</a> (i.e., performance measurement, policy analysis,
       program evaluation, and foundational fact-finding)?</span></b>
       <p>During the stakeholder engagement process, you may have documented a
       variety of evidence-building activities in your agency. Consider how diverse
